moved code to src

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/koga73/security-test#readme",
   "dependencies": {
     "gulp": "^3.9.1",
+    "gulp-preprocess": "^3.0.1",
     "gulp-sass": "^4.0.1"
   }
 }
