--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "gulp": "^3.9.1",
     "gulp-preprocess": "^3.0.1",
     "gulp-sass": "^4.0.1",
-    "run-sequence": "^2.2.1"
+    "run-sequence": "^2.2.1",
+    "natives": "^1.1.6"
   }
 }
